force-app/main/default/objects/ContentVersion/fields/dca_cnvrt_file__Original_Record_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_file__Original_Record_Owner_ID__c</fullName>
    <description>The owner id of the original Note that was converted into this new Note. This can be helpful in situations where old notes owned by inactive users are converted so you can track back to originally owned/created it. Inactive users can neither be the owner of a new Note nor have the new Note shared to them in ContentDocumentLink, so this field is the only audit trail especially if the old notes get deleted.</description>
    <externalId>true</externalId>
    <inlineHelpText>The owner id of the original Note that was converted into this new Note. Inactive users can neither be the owner of a new Note nor have the new Note shared to them, so this field is the only audit trail especially if the old notes get deleted.</inlineHelpText>
    <label>Original Record Owner ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>