force-app/main/default/objects/ContentVersion/fields/dca_cnvrt_file__Original_Record_Parent_ID__c.field-meta.xml
<CustomField>
    <fullName>dca_cnvrt_file__Original_Record_Parent_ID__c</fullName>
    <description>The original note or attachment parent id this content version was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</description>
    <externalId>true</externalId>
    <inlineHelpText>The original note or attachment parent id this content version was converted from. For history tracking purpose and used in conversion process to know the parent record to link the new content version to.</inlineHelpText>
    <label>Original Record Parent ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>